--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 23;
+    color: yellow;
+}
+
+div {
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px;
 }
