--- a/main.css
+++ b/main.css
@@ -1,12 +1,11 @@
 h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 23;
-    color: yellow;
+    color: red;
 }
 
 div {
     margin: auto;
     width: 50%;
-    border: 3px solid green;
     padding: 10px;
 }
