--- a/main.css
+++ b/main.css
@@ -2,10 +2,12 @@ h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 23;
     color: red;
+    text-align: center;
 }
 
 div {
     margin: auto;
     width: 50%;
     padding: 10px;
+    text-align: center;
 }
