--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20%;
+    font-size: 20vw;
     color: red;
     text-align: center;
 }
